# VPP_1

./: CMakeLists.txt  bohrung.cpp  bohrung.h  fraesung.cpp  fraesung.h  komponente.cpp  komponente.h  komponentenlist.cpp  komponentenlist.h  main.cpp
